# ShadowForge-Toolkit

./: .gitignore  Cleansweep.py  J  LICENSE  README  README.md  ShadowForge.ps1  UsersAdministratorgobinamass.txt  amass_output.txt  auto.py  badclean.py  badclean_v3.py  banner.py  base_recon.yaml  bedtime.bat  cleaner_v3.py  cleaner_v3.py - Shortcut.lnk  cleanup.ps1  dossier.dot  engine.py  fantasy_land_box.py  flask_dash.py  hunt_log.txt  io_hog_hunt.py  json_validator.py  locked_requirements.txt  main.py  main_old.py  manual_control.py  merge_workflows.py  merged_workflow.yaml  net_ghost_hunt.py  onedrive_recon.py  onedrive_recon_log.txt  open_dorks.py  os_log.txt  osint.py  patch_log.csv  patch_log_old.csv  payloads.py  (+33 more)
Config/: persona.json  shadowforge.yaml
docs/: usage.md
modules/: Privesc.psm1  Recon.psm1  ai_suggest.py  bedtime.py  cleanse.py  main.py  recon.py  scan.py  shield.py
osint/: domain_enum.py
reports/: osint_name_Brandon_Kyle_Gilbert.txt  osint_phone_+18016965327.txt
shadowforge/: .gitignore  ai_injector.py  cleanup.bat  engine.py  main.py  recon_report.json  shadowforge.bat
shadowforge_pkg/: auto.py
shadowforge_pkg/shield/: __init__.py
src/shadowforge/: #!usrbinenv python3.txt  __main__.py  auto.py  engine.py  main.py  payloads.py  recon.py
src/shadowforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/shadowforge/modules/: auto.py  osint.py  payloads.py  recon.py  security_audit.py  utils.py  vulns.py
src/shadowforge/modules/security_audit/: __init__.py  (+1 more)
src/shadowforge/shield/: proxy.py
(+1 files in other folders)
