[project]
name = "shadowforge"
version = "0.1.0"
description = "Utah Viking's ethical pentest toolkit—scan, payload, shield."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0",
    "requests>=2.28",
    "scapy>=2.4",
    "stem>=1.8"
]
authors = [
    {name = "Redbeard Bradx", email = "your@email.com"}
]
license = {text = "MIT"}
keywords = ["pentest", "ethical-hacking", "network-scan"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0"
]

[project.scripts]
shadowforge = "shadowforge.main:cli_entry"

[project.urls]
Homepage = "https://github.com/Redbeardbradx/ShadowForge-Toolkit"
# Save. Verify parse: python -c "import tomllib; tomllib.loads(open('pyproject.toml').read())"  # No error—clean rune